# waterfalls-client

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: code_coverage.yml  cont_integration.yml
src/: api.rs  async.rs  blocking.rs  lib.rs
tests/: integration.rs
