[package]
name = "waterfalls-client"
version = "0.12.1"
edition = "2021"
authors = [
    "Alekos Filini <alekos.filini@gmail.com>",
    "Riccardo Casatta <riccardo@casatta.it>",
]
license = "MIT"
homepage = "https://github.com/RCasatta/waterfalls-client"
repository = "https://github.com/RCasatta/waterfalls-client"
documentation = "https://docs.rs/waterfalls-client/"
description = "Waterfalls API client library. Supports plaintext, TLS and Onion servers. Blocking or async"
keywords = ["bitcoin", "waterfalls"]
readme = "README.md"
rust-version = "1.63.0"

[lib]
name = "waterfalls_client"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bitcoin = { version = "0.32", features = [
    "serde",
    "std",
], default-features = false }
hex = { version = "0.2", package = "hex-conservative" }
log = "^0.4"
minreq = { version = "2.11.0", features = [
    "json-using-serde",
], optional = true }
reqwest = { version = "0.12", features = [
    "json",
], default-features = false, optional = true }

# default async runtime
tokio = { version = "1", features = ["time"], optional = true }

[dev-dependencies]
serde_json = "1.0"
tokio = { version = "1.20.1", features = ["full"] }
waterfalls = { version = "0.9.4", default-features = false, features = [
    "test_env",
] }
lazy_static = "1.4.0"
tempfile = "3.0"
env_logger = "0.11"
elements = "0.24"

[features]
default = ["blocking", "async", "async-https", "tokio"]
blocking = ["minreq", "minreq/proxy"]
blocking-https = ["blocking", "minreq/https"]
blocking-https-rustls = ["blocking", "minreq/https-rustls"]
blocking-https-native = ["blocking", "minreq/https-native"]
blocking-https-bundled = ["blocking", "minreq/https-bundled"]

tokio = ["dep:tokio"]
async = ["reqwest", "reqwest/socks", "tokio?/time"]
async-https = ["async", "reqwest/default-tls"]
async-https-native = ["async", "reqwest/native-tls"]
async-https-rustls = ["async", "reqwest/rustls-tls"]
async-https-rustls-manual-roots = ["async", "reqwest/rustls-tls-manual-roots"]
